<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.fiuady.homecontrol.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="Bienvenido a HomeControl"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/illumination_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/illumination"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/text_illumination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/illumination"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/doors_and_windows_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:src="@drawable/doors"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/text_doors_and_windows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doors_and_windows"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/movement_detector_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:src="@drawable/alarm"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/alarm_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:src="@drawable/movement"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_detector"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/temperature_control_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:src="@drawable/temperature"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_control"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/my_profile_btn"
                    android:layout_height="110dp"
                    android:layout_width="110dp"
                    android:src="@drawable/profile"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_profile"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>



</LinearLayout>