<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <!-- Esto es lo que se muestra siempre -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/illumination_item_section_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="...section name..."
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ON"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/illumination_item_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OFF"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- La idea es que lo que viene ahora sólo se vea si se presiona el nombre de
    la sección (por eso está en un linearlayout). Además según el tipo de sección
    que sea, se mostrará un linearlayout u otro. -->

    <LinearLayout
        android:id="@+id/illumination_item_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intensity"
                android:textSize="18sp"/>

            <!-- Aquí falta una barrita para regular la intensidad -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic_regulation"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <CheckBox
                android:id="@+id/illumination_item_autoreg_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/illumination_item_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textSize="18sp"/>

        <!-- Aquí falta el ColorPicker -->

    </LinearLayout>

</LinearLayout>