<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.fiuady.homecontrol.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="Bienvenido a HomeControl"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/illumination"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bombilla"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/text_illumination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/illumination"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/doors_and_windows"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:src="@mipmap/llave"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/text_doors_and_windows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doors_and_windows"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/movement_detector"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:src="@mipmap/antifaz"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/alarm"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:src="@mipmap/alarma"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_detector"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/temperature_control"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:src="@mipmap/termometro"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@id/temperature_control"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/my_profile"
                    android:layout_height="125dp"
                    android:layout_width="125dp"
                    android:src="@mipmap/perfil"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@id/my_profile"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>